Clean up static init in EntityInfoHandler